@@ -58,6 +58,7 @@ dpkg (1.18.0) UNRELEASED; urgency=low
       symbol is available.
   * Use strftime() instead of «date -R» in dpkg-genchanges, as the latter
     is not specified by POSIX and is not widely portable.
+  * Warn on obsolete '<' and '>' operators in dpkg --compare-versions.
 
   [ Updated manpages translations ]
   * German (Helge Kreutzmann).
